# dioxus-markdownmonkey

./: .gitignore  Cargo.toml  README.md  README_EN.md
.github/workflows/: ci.yml
assets/: editor_enhance.js
assets/dictionaries/: common_words.txt
src/: app.rs  config.rs  main.rs
src/actions/: app_actions.rs  editor_actions.rs  file_actions.rs  mod.rs  shortcut_actions.rs  tests.rs
src/components/: ai_chat_modal.rs  ai_result_modal.rs  close_confirm_modal.rs  editor.rs  file_modified_modal.rs  file_tree.rs  global_search_modal.rs  icons.rs  large_file_warning_modal.rs  mod.rs  preview.rs  search_modal.rs  settings_modal.rs  shortcuts_modal.rs  sidebar.rs  statusbar.rs  tabbar.rs  table_editor_modal.rs  toolbar.rs
src/services/: __tests.rs  ai.rs  auto_save.rs  export.rs  file_watcher.rs  image.rs  keyring_service.rs  markdown.rs  mod.rs  recent_files.rs  settings.rs  spellcheck.rs  syntax_highlight.rs  theme_detector.rs
src/services/export/: docx.rs  html.rs  mod.rs  pdf.rs  shared.rs  text.rs
src/state/: app_state.rs  app_state_ops.rs  app_state_tests.rs  mod.rs  types.rs
src/styles/: base.css  editor.css  modals.css  sidebar.css  toolbar.css  variables.css
src/utils/: file_utils.rs  i18n.rs  mod.rs
